# Tetris

./: CMakeLists.txt
include/animation/: animation.h  blinkanimation.h  frameanimation.h
include/conf/: basicconf.h  gameconf.h  keyconf.h  resourceconf.h  sceneconf.h  scoreconf.h  settingconf.h  uiconf.h
include/core/: context.h  game.h  settings.h
include/framework/: audiomanager.h  context.h  inputmanager.h  resourcemanager.h
include/game/: core.h  score.h  settings.h
include/manager/: audiomanager.h  inputmanager.h  resourcemanager.h
include/scene/: countscene.h  gamescene.h  menuscene.h  pausescene.h  scene.h  scenemanager.h  settingscene.h  titlescene.h
include/ui/: firework.h  layout.h  option.h  optionicon.h  text.h
include/util/: common.h  random.h  render.h  sdlresource.h  util.h
resource/: icon.rc
src/: main.cpp
src/animation/: animation.cpp  blinkanimation.cpp  frameanimation.cpp
src/conf/: basicconf.cpp  keyconf.cpp  resourceconf.cpp  sceneconf.cpp  settingconf.cpp
src/core/: context.cpp  game.cpp  settings.cpp
src/framework/: audiomanager.cpp  context.cpp  inputmanager.cpp  resourcemanager.cpp
src/game/: core.cpp  settings.cpp
src/manager/: audiomanager.cpp  inputmanager.cpp  resourcemanager.cpp
src/scene/: countscene.cpp  gamescene.cpp  menuscene.cpp  pausescene.cpp  scene.cpp  scenemanager.cpp  settingscene.cpp  titlescene.cpp
src/ui/: firework.cpp  layout.cpp  option.cpp  optionicon.cpp  text.cpp
src/util/: common.cpp  random.cpp  render.cpp  sdlresource.cpp  util.cpp
